@@ -1,3 +1,8 @@
+2001-07-19  Martin Baulig  <baulig@suse.de>
+
+	* bonobo/bonobo-ui-engine.[ch]: Ported to GObject.
+	* bonobo/bonobo-ui-xml.[ch]: Ported to GObject.
+
 2001-07-17  Michael Meeks  <michael@ximian.com>
 
 	* bonobo/Makefile.am (libbonoboinclude_HEADERS): remove
